--- a/style.css
+++ b/style.css
@@ -123,3 +123,23 @@ video {
    margin-top: 200px;
  }
  }
+
+ body  {
+ 	 background-color: lightblue; /* sets the whole background color */
+   font-family : verdana, calibri;
+ 	 color: darkblue;
+ }
+ form  {
+ 	 border: 2px solid black;
+ 	 border-radius: 20px;
+ 	 padding: 50px;
+ 	 width: 50%;
+   margin: 100px 350px;
+ }
+ textarea   {
+   width : 600px;
+	 height : 200px;
+	 resize : none;
+	 overflow-y : scroll;
+	 color: darkblue;
+ }
