--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 
+
 #header {
 
   background-color: black;
+
 }
 #header h1  {
   font-family: algerian,verdana, sans-serif;
@@ -10,6 +12,7 @@
   padding-top: 45px;
   color:white;
   font-size: 35px;
+
 }
 #header p  {
 
@@ -105,7 +108,7 @@ video {
   margin: 40px 20px;
   margin-bottom: 100px;
   margin-top: 100px;
-  max-width: 100%;
+  width: 100%
   height: auto;
 }
 
@@ -129,6 +132,7 @@ video {
      margin-top: 153px;
    }
    }
+
 
  body  {
  	 background-color: lightblue; /* sets the whole background color */
